--- a/client/kalzu.html
+++ b/client/kalzu.html
@@ -1,5 +1,6 @@
 <head>
   <title>kalzu - Your calendar manager</title>
+  <link href='https://fonts.googleapis.com/css?family=Ultra|Stint+Ultra+Expanded|Slabo+13px' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
